third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-msrv/transmute-ref-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-not-a-reference.rs:17:49
   |
17 | const SRC_NOT_A_REFERENCE: &u8 = transmute_ref!(0usize);
   |                                  ---------------^^^^^^-
   |                                  |              |
   |                                  |              expected reference, found `usize`
   |                                  |              help: consider borrowing here: `&0usize`
   |                                  expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`
